# juniper-canopy

./: .bandit.yml  .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .markdownlint.json  .markdownlint.yaml  .markdownlist.json  .pre-commit-config.yaml  =2.6.3  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  conda_environment.yaml  conftest.py  demo  happy_dance.css  install.sh  juniper_canopy.  markdown.css  pyproject.toml  tests  try
.github/: CODEOWNERS  dependabot.yml
.github/instructions/: copilot-instructions.md
.github/workflows/: ci.yml  lockfile-update.yml  publish.yml  security-scan.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
conf/: Dockerfile  app_config.yaml  color_display_codes.bash  color_display_codes.conf  color_table.py  common-OLD.conf  common.conf  common.conf.bash.common.conf  common_functions.conf  conda_environment-ORIG.yaml  conda_environment.yaml  conda_environment_ci.yaml  config_fail.conf  create_performance_profile.conf  docker-compose.yaml  get_code_stats.conf  get_code_stats_fn.conf  get_code_stats_functions.conf  get_file_lines.conf  get_file_todo.conf  get_file_todo_fn.conf  get_file_todo_functions.conf  get_module_filenames.conf  get_module_filenames_fn.conf  get_module_filenames_functions.conf  get_todo_comments.conf  init.conf  init_fn.conf  juniper_canopy-demo.conf  juniper_canopy.conf  juniper_canopy_functions.conf  last_mod_update.conf  log_colors.conf  logging.conf  logging_colors.conf  logging_functions.conf  proto.conf  requirements.txt  requirements_ci.txt  run_all_tests.conf  (+8 more)
conf/layouts/: metrics_layouts.json
docs/: ADR_001_VALID_TEST_SKIPS.md  CONSTANTS_GUIDE.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_OVERVIEW.md  ENVIRONMENT_SETUP.md  QUICK_START.md  REFERENCE.md  TEST_DIRECTORY_STRUCTURE.md  USER_MANUAL.md
docs/api/: API_REFERENCE.md  API_SCHEMAS.md
docs/cascor/: CASCOR_BACKEND_MANUAL.md  CASCOR_BACKEND_QUICK_START.md  CASCOR_BACKEND_REFERENCE.md  CONSTANTS_GUIDE.md
docs/ci_cd/: CICD_ENVIRONMENT_SETUP.md  CICD_MANUAL.md  CICD_QUICK_START.md  CICD_REFERENCE.md
docs/demo/: DEMO_MODE_ENVIRONMENT_SETUP.md  DEMO_MODE_MANUAL.md  DEMO_MODE_QUICK_START.md  DEMO_MODE_REFERENCE.md
docs/deployment/: KUBERNETES_DEPLOYMENT_PLAN.md
docs/phase1/: README.md
docs/phase2/: README.md
docs/phase3/: README.md
docs/testing/: ADR_001_VALID_TEST_SKIPS.md  SELECTIVE_TEST_ENABLEMENT_SUMMARY.md  SELECTIVE_TEST_GUIDE.md  TESTING_ANALYSIS_REPORT.md  TESTING_ENVIRONMENT_SETUP.md  TESTING_MANUAL.md  TESTING_QUICK_START.md  TESTING_REFERENCE.md  TESTING_REPORTS_COVERAGE.md  TEST_ENABLEMENT_QUICK_REFERENCE.md
juniper_canopy/: __init__.py
notes/: CANOPY_JUNIPER_DATA_INTEGRATION_PLAN.md  CASCOR-AUDIT_CROSS-REFERENCES_2026-02-18.md  CONDA_DEPENDENCY_FILE_HEADER.md  DEMO_HANG_ANALYSIS_2026-01-03.md  DEPENDENCY_UPDATE_WORKFLOW.md  FIX_DEFAULT_SCALE_2025-12-13.md  FIX_FAILING_TESTS.md  FIX_PARENT_PATH_RESOLUTION_2026-01-02.md  INTEGRATION_ROADMAP-01.md  JUNIPER-CANOPY_POST-RELEASE_DEVELOPMENT-ROADMAP.md  PIP_DEPENDENCY_FILE_HEADER.md  PR_PHASE1_VALIDATION_2026-01-07.md  TEST_SUITE_AUDIT_CANOPY_AMP.md  TEST_SUITE_AUDIT_CANOPY_CLAUDE.md  TEST_SUITE_CICD_ENHANCEMENT_DEVELOPMENT_PLAN.md  TEST_SUITE_CICD_ENHANCEMENT_DEVELOPMENT_PLAN_AMP.md  TEST_SUITE_CICD_ENHANCEMENT_DEVELOPMENT_PLAN_CLAUDE.md  THREAD_HANDOFF_PROCEDURE.md  WORKTREE_CLEANUP_PROCEDURE.md  WORKTREE_SETUP_PROCEDURE.md  conda_environment.yaml  conda_pytorch_cuda.yml  juniper-canopy_OTHER_DEPENDENCIES.md
notes/history/: CANOPY_CASCOR_INTEGRATION_REGRESSION_2026-02-11.md  FIX_FAILING_TESTS.md  INDEX.md  INTEGRATION_DEVELOPMENT_PLAN.md  INTEGRATION_ROADMAP-01.md  INTEGRATION_ROADMAP.md  JUNIPER-CANOPY_POST-RELEASE_DEVELOPMENT-ROADMAP_2026-02-25.md  PRE-DEPLOYMENT_ROADMAP.md  REGRESSION_ANALYSIS_STARTUP_FAILURE_2026-02-09.md  TEST_SUITE_AUDIT_CANOPY_AMP.md  TEST_SUITE_CICD_ENHANCEMENT_DEVELOPMENT_PLAN_AMP.md  TEST_SUITE_CICD_ENHANCEMENT_DEVELOPMENT_PLAN_CLAUDE.md  VALIDATION_REPORT_2026-01-12.md
notes/mcp/: EXA_API_REFERENCE.md  claude-code-alphavantage-setup-guide.md  claude-code-serena-setup-guide.md
notes/pull_requests/: PR_DESCRIPTION_INTEGRATION_AND_ENHANCEMENTS_2026-02-18.md  PR_SECURITY_HARDENING_2026-03-03.md
notes/releases/: RELEASE_NOTES_v0.14.1-alpha.md  RELEASE_NOTES_v0.15.1-alpha.md  RELEASE_NOTES_v0.15.1-alpha_2026-01-08.md  RELEASE_NOTES_v0.25.0-alpha.md
reports/junit/: results.xml
snapshots/: snapshot_history.jsonl
src/: .coverage  .markdownlint.yaml  =3.12  __init__.py  canopy_constants.py  config_manager.py  constants.py  demo_mode.py  health.py  main.py  middleware.py  observability.py  security.py  settings.py
src/backend/: __init__.py  cascor_integration.py  cascor_service_adapter.py  cassandra_client.py  data_adapter.py  demo_backend.py  protocol.py  redis_client.py  service_backend.py  training_monitor.py
src/communication/: websocket_manager.py
src/frontend/: callback_context.py  dashboard_manager.py
src/juniper_data_client/: __init__.py  client.py  exceptions.py
src/logger/: logger.py
src/reports/junit/: results.xml
src/snapshots/: snapshot_history.jsonl
src/tests/: conftest.py
util/: __date_functions.bash  __get_os_name.bash  __get_project_dir.bash  __git_log_weeks.bash  bla.bash  bla_child.bash  change_path.bash  color_table.py  create_performance_profile.bash  get_code_stats.bash  get_file_lines.bash  get_file_todo.bash  get_module_filenames.bash  get_script_path.bash  get_todo_comments.bash  git_branch_ages.bash  juniper_canopy-demo.bash  juniper_canopy.bash  last_mod_update.bash  main.bash  mv2_bash_n_back.bash  new_random_seed.py  proto.bash  pytest_setup.py  random_seed.bash  rsink.bash  run_all_tests.bash  save_to_usb.bash  script_template.bash  setup_environment.bash  source_tree.bash  todo_search.bash  update_weekly.bash
util/temp/: README.md  api_request.bash  api_request.conf  close_logging.conf  color_display_codes.conf  launch_close.bash  launch_close.conf
(+123 files in other folders)
