#####################################################################################################################################################################################################
# Project:       Juniper
# Sub-Project:   JuniperCanopy
# Application:   juniper_canopy
# File Name:     pyproject.toml
# Author:        Paul Calnon
# Version:       0.2.3
#
# Date Created:  2025-11-03
# Last Modified: 2026-01-31
#
# License:       MIT License
# Copyright:     Copyright (c) 2024,2025,2026 Paul Calnon
#
# Description:
#    Python project configuration for Juniper Canopy
#    Configures Black, isort, pytest, coverage, and mypy
#
# References:
#    - CANOPY-P1-001: CI/CD Pipeline Parity
#####################################################################################################################################################################################################

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-canopy"
version = "0.2.1"
description = "Real-time monitoring dashboard for Cascade Correlation Neural Network"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Paul Calnon", email = "paul.calnon@gmail.com" }]
keywords = [
  "neural-network",
  "visualization",
  "monitoring",
  "dashboard",
  "cascade-correlation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/pcalnon/Juniper"
Documentation = "https://github.com/pcalnon/Juniper#juniper-canopy"
Repository = "https://github.com/pcalnon/Juniper"
Issues = "https://github.com/pcalnon/Juniper/issues"

[project.optional-dependencies]
juniper-data = [
    "juniper-data-client>=0.3.0",
    "requests>=2.28.0",
]
juniper-cascor = [
    "juniper-cascor-client>=0.1.0",
]

# ==========================================
# Black Configuration
# ==========================================
[tool.black]
line-length = 512
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.pytest_cache
    | \.trunk
    | __pycache__
    | data
    | logs
    | reports
    | htmlcov
    | images
)/
'''

# ==========================================
# isort Configuration
# ==========================================
[tool.isort]
profile = "black"
line_length = 512
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip_gitignore = true
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = [".git", "__pycache__", ".pytest_cache", ".trunk", "data", "logs", "reports", "htmlcov"]
skip_glob = ["*/data/*", "*/logs/*", "*/reports/*"]

# ==========================================
# Bandit Security Scanner Configuration
# ==========================================
[tool.bandit]
exclude_dirs = ["tests", "src/tests", ".venv", "venv", "__pycache__"]
skips = ["B101", "B311"]

# ==========================================
# MyPy Type Checker Configuration
# ==========================================
[tool.mypy]
python_version = "3.14"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
exclude = [
    "^data/",
    "^logs/",
    "^reports/",
    "^htmlcov/",
    "^tests/",
]

[[tool.mypy.overrides]]
module = [
    "dash.*",
    "plotly.*",
    "fastapi.*",
    "uvicorn.*",
    "starlette.*",
]
ignore_missing_imports = true

# ==========================================
# Pytest Configuration (additional)
# ==========================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["src/tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 60
timeout_method = "signal"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--continue-on-collection-errors",
    "--tb=short",
]
markers = [
  "unit: Unit tests (fast, no external dependencies)",
  "integration: Integration tests (may use DB, files, etc.)",
  "performance: Performance tests",
  "regression: Regression tests",
  "e2e: End-to-end tests (require full system)",
  "slow: Slow-running tests (>1 second)",
  "requires_redis: Tests requiring Redis connection",
  "requires_cascor: Tests requiring CasCor backend",
  "requires_server: Tests requiring live server running",
  "requires_display: Tests requiring display for visualization",
  "api: Tests for API endpoints",
  "generators: Tests for data generators",
]
asyncio_mode = "auto"
consider_namespace_packages = false
filterwarnings = [
  "error::RuntimeWarning",
  "ignore::DeprecationWarning:dash.*",
  "ignore::DeprecationWarning:plotly.*",
  "ignore::pytest.PytestUnraisableExceptionWarning",
]

# ==========================================
# Coverage Configuration (additional)
# ==========================================
[tool.coverage.run]
source = ["src"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/site-packages/*",
  "*/conftest.py",
  "*/venv/*",
  "*/.venv/*",
]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
skip_empty = true
fail_under = 80
precision = 2
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "reports/coverage"
title = "Juniper Canopy Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true
